--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
-
+@inject IJSRuntime JS
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components
-@inject IJSRuntime JS
+@rendermode InteractiveServer
 
 <PageTitle>Home</PageTitle>
 
@@ -23,7 +23,7 @@
             <div class="form-group">
                 <label for="menuSelect" class="form-label">Menu:</label>
                 <select id="menuSelect" class="form-select" @onchange="HandleSelection">
-                    <option value="">Selecione uma opção</option>
+                    <option  value="">Selecione uma opção</option>
                     <option value="1">Opção 1</option>
                     <option value="2">Opção 2</option>
                     <option value="3">Opção 3</option>
@@ -44,7 +44,7 @@
 
 @code {
     private string escolha;
-    private string resultado;
+    private string resultado = "";
 
     private void HandleSelection(ChangeEventArgs e)
     {
